=== 1.0.0 (2025-02-27)

* Initial Public Release