@@ -142,6 +142,14 @@ The +is+ method also takes +args+ and +invalid_args_message+ keyword arguments.
 The +before+ method takes a block, and this block is executed before command
 or subcommand execution, in the same context that the +run+ block would be
 executed in.  It is passed the remaining argv array and the already parsed
+options. This is not called if an invalid subcommand is requested and there
+is no run block for the command.
+
+== +after_options+
+
+The +after_options+ method takes a block, and this block is executed
+directly after options parsing, in the same context that the +run+ block would be
+executed in.  It is passed the remaining argv array and the already parsed
 options.
 
 == +skip_option_parsing+
