@@ -1,3 +1,7 @@
+=== master
+
+* Support after_options method for a block called after options processing (jeremyevans)
+
 === 1.0.0 (2025-02-27)
 
 * Initial Public Release
